--- a/src/base/_base.scss
+++ b/src/base/_base.scss
@@ -14,6 +14,6 @@
 @import 'project/padding';
 @import 'project/vars';
 @import 'project/fonts';
-@import 'project/susy';
+@import 'project/grid';
 
 @import 'mixins/media-queries';
