--- a/src/base/_base.scss
+++ b/src/base/_base.scss
@@ -15,5 +15,6 @@
 @import 'project/vars';
 @import 'project/fonts';
 @import 'project/grid';
+@import 'project/button';
 
 @import 'mixins/media-queries';
