--- a/src/base/project/_fonts.scss
+++ b/src/base/project/_fonts.scss
@@ -4,13 +4,13 @@ $lineHeightBase: 1.2;
 // Load font files from local file
 $fontFamilies: ();
 
-$primaryFont: 'opensans', 'Helvetica', 'Arial', sans-serif;
-$secondaryFont: 'aleo', 'Helvetica', 'Arial', sans-serif;
+$primaryFont: 'Lato', 'Helvetica', 'Arial', sans-serif;
+$secondaryFont: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
 
 $fs: (
-		xs: 11px,
+		xs: 12px,
 		s: 16px,
-		m: 22px,
+		m: 18px,
 		xm: 28px,
 		l: 32px,
 		xl: 48px
