--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -21,7 +21,7 @@
 	@include inblock(middle);
 	touch-action: manipulation;
 
-	padding: buttonPadding(1) (buttonPadding(1) * 4.2);
+	padding: buttonPadding(1) (buttonPadding(1) * 2);
 
 	@include fs(buttonFontSize(1));
 	line-height: 1;
@@ -37,18 +37,25 @@
 
 	border: $button-border-size solid $default;
 
-	&:not(.button--outline):hover {
-		background-color: darken($default, $button-hover-multi);
-		border-color: darken($default, $button-hover-multi);
+	&:not([disabled]) {
+		&:not(.button--outline):hover {
+			background-color: darken($default, $button-hover-multi);
+			border-color: darken($default, $button-hover-multi);
+		}
+
+		&.button--outline {
+			background-color: transparent;
+			color: $default;
+
+			&:hover {
+				background-color: rgba($default, 0.3);
+			}
+		}
 	}
 
-	&.button--outline {
-		background-color: transparent;
-		color: $default;
-
-		&:hover {
-			background-color: rgba($default, 0.3);
-		}
+	&[disabled] {
+		cursor: not-allowed;
+		opacity: 0.4;
 	}
 
 	@each $type, $colour in $colours {
@@ -60,17 +67,19 @@
 				color: map-get($colours, primary);
 			}
 
-			&:not(.button--outline):hover {
-				background-color: darken($colour, $button-hover-multi);
-				border-color: darken($colour, $button-hover-multi);
-			}
+			&:not([disabled]) {
+				&:not(.button--outline):hover {
+					background-color: darken($colour, $button-hover-multi);
+					border-color: darken($colour, $button-hover-multi);
+				}
 
-			&.button--outline {
-				background-color: transparent;
-				color: $colour;
+				&.button--outline {
+					background-color: transparent;
+					color: $colour;
 
-				&:hover {
-					background-color: rgba($colour, 0.3);
+					&:hover {
+						background-color: rgba($colour, 0.3);
+					}
 				}
 			}
 		}
@@ -78,7 +87,7 @@
 
 	@each $type, $multi in $button-sizes {
 		&--#{$type} {
-			padding: buttonPadding($multi) (buttonPadding($multi) * 4.2);
+			padding: buttonPadding($multi) (buttonPadding($multi) * 2);
 			height: buttonHeight($multi);
 			@include fs(buttonFontSize($multi));
 			@include border-radius($multi);
