Buttons can now be placed in a button-group with both border-radius and without

--- a/src/base/_base.scss
+++ b/src/base/_base.scss
@@ -9,6 +9,7 @@
 @import 'mixins/clearfix';
 @import 'mixins/triangle';
 @import 'mixins/context';
+@import 'mixins/border-radius';
 
 @import 'project/colours';
 @import 'project/padding';
