--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -1,21 +1,3 @@
-@function buttonPadding($multi) {
-	@return ceil($button-padding-base * $multi);
-}
-
-@function buttonFontSize($multi) {
-	@return ceil($button-font-size-base * $multi);
-}
-
-@function buttonHeight($multi) {
-	@return ceil((((buttonFontSize($multi)) + (buttonPadding($multi) * 2))) + $button-border-size);
-}
-
-@mixin border-radius($multi) {
-	@if $button-border-radius-enabled == true {
-		border-radius: ceil(buttonHeight($multi) * $button-border-radius);
-	}
-}
-
 .button {
 	position: relative;
 	@include inblock(middle);
@@ -92,5 +74,71 @@
 			@include fs(buttonFontSize($multi));
 			@include border-radius($multi);
 		}
+	}
+}
+
+
+.button-group {
+	position: relative;
+	@include inblock(middle);
+	@include clearfix();
+
+	.button + .button,
+	.button + .button-group,
+	.button-group + .button,
+	.button-group + .button-group {
+		margin-left: (-1 * (1px));
+	}
+
+	@if $button-border-radius-enabled == true {
+		& > .button, & > .dropdown-toggle {
+			&:last-child:not(:first-child) {
+				@include border-left-radius(0);
+			}
+		}
+	}
+
+	& > .button {
+		@if $button-border-radius-enabled == true {
+			&:not(:first-child):not(:last-child) {
+				border-radius: 0;
+			}
+		}
+
+		&:first-child {
+			margin-left: 0;
+
+			@if $button-border-radius-enabled == true {
+				&:not(:last-child) {
+					@include border-right-radius(0);
+				}
+			}
+		}
+	}
+
+	@if $button-border-radius-enabled == true {
+		& > .button-group {
+			&:not(:first-child):not(:last-child) {
+				& > .button {
+					border-radius: 0;
+				}
+			}
+
+			&:first-child:not(:last-child) {
+				& > .button:last-child {
+					@include border-right-radius(0);
+				}
+			}
+
+			&:last-child:not(:first-child) {
+				& > .button:first-child {
+					@include border-left-radius(0);
+				}
+			}
+		}
+	}
+
+	& > .button-group, & > .button {
+		float: left;
 	}
 }
