minor changes in a comment line

--- a/src/scss/_placeholders.scss
+++ b/src/scss/_placeholders.scss
@@ -98,7 +98,7 @@
 }
 
 
-// Anchura a 100% dentro de row o contenedor
+// 100% width inside grid columns
 %full-width {
   margin-left: -$grid-gutter-width / 2;
   margin-right: -$grid-gutter-width / 2;
