minor changes in a comment line

--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -165,7 +165,7 @@
 }
 
 
-// deprecated ".icon-rounded"
+// deprecated ".icon-rounded". Use rounded-corners instead.
 .icon-rounded,
 .rounded-corners {
   border-radius: 15%;
