Changed .container naming and added SCSS variables for all .container sizes

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,10 +3,12 @@
 *  $LAYOUT
 */
 
-$gutterwidth:             24px;
-$pagemaxwidth:            1380px;
-$radius:                  3px;
-$border-box:              true;
+$gutterwidth:              24px;
+$container-maxwidth        1380px;
+$container-medium-maxwidth 944px;
+$container-small-maxwidth  400px;
+$radius:                   3px;
+$border-box:               true;
 
 
 /**
