Fix container variables

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,12 +3,12 @@
 *  $LAYOUT
 */
 
-$gutterwidth:              24px;
-$container-maxwidth        1380px;
-$container-medium-maxwidth 944px;
-$container-small-maxwidth  400px;
-$radius:                   3px;
-$border-box:               true;
+$gutterwidth:               24px;
+$container-maxwidth:        1380px;
+$container-medium-maxwidth: 944px;
+$container-small-maxwidth:  400px;
+$radius:                    3px;
+$border-box:                true;
 
 
 /**
@@ -23,7 +23,7 @@ $font-size-base-medium: 15px;
 $font-size-base-large:  15px;
 
 $line-height-base:      1.5em;
-$font-weight-base:    400;
+$font-weight-base:      400;
 
 /**
 *  $COLOURS
