--- a/src/scss/_placeholders.scss
+++ b/src/scss/_placeholders.scss
@@ -3,11 +3,11 @@
 */
 
 
-// Centrar y dar un ancho máximo igual a $pagemaxwidth.
+// Centrar y dar un ancho máximo igual a $container-maxwidth.
 %max-width {
   margin-left: auto;
   margin-right: auto;
-  max-width: $pagemaxwidth;
+  max-width: $container-maxwidth;
 }
 
 // The ghost, nudged to maintain perfect centering
