Changed double quotes to single quotes in variables

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -16,7 +16,7 @@ $border-box:                true;
 */
 
 $basefont: 'Lato', sans-serif;
-$codefont: "Courier New", monospace;
+$codefont: 'Courier New', monospace;
 
 $font-size-base:        14px;
 $font-size-base-medium: 15px;
