Translated a line to English

--- a/src/scss/_placeholders.scss
+++ b/src/scss/_placeholders.scss
@@ -3,7 +3,7 @@
 */
 
 
-// Centrar y dar un ancho máximo igual a $container-maxwidth.
+// Focus and give a maximum width equal to $container-maxwidth.
 %max-width {
   margin-left: auto;
   margin-right: auto;
