--- a/src/_sierra.scss
+++ b/src/_sierra.scss
@@ -16,6 +16,7 @@
 @import 'scss/loading-bar';
 @import 'scss/loading-spinner';
 @import 'scss/message-bars';
+@import 'scss/paginator';
 @import 'scss/rating-circle';
 @import 'scss/tables';
 @import 'scss/tabs';
