--- a/src/global/_all.scss
+++ b/src/global/_all.scss
@@ -1,5 +1,8 @@
 html {
 	font: 400 #{$emBase}/#{$lineHeightBase} $primaryFont;
+
+	background-color: #2c3e50;
+	color: $white;
 }
 
 body {
@@ -18,29 +21,6 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 
 	-webkit-tap-highlight-color: transparent;
-}
-
-figure {
-	margin: 0;
-	padding: 0;
-
-	display: block;
-
-	figcaption {
-		display: block;
-	}
-}
-
-img {
-	@include size(100% auto);
-
-	&.auto {
-		@include size(auto);
-	}
-
-	&[src$=".svg"] {
-		overflow: hidden;
-	}
 }
 
 a {
