--- a/src/base/project/_colours.scss
+++ b/src/base/project/_colours.scss
@@ -8,5 +8,6 @@ $default: #64829f;
 $colours: (
 	'primary': #1abc9c,
 	'secondary': #9b59b6,
-	'white': $white
+	'white': $white,
+	'grey': #969da6
 );
