Badges and new build

--- a/src/_sierra.scss
+++ b/src/_sierra.scss
@@ -9,6 +9,7 @@
 @import 'scss/main';
 
 @import 'scss/background-colors';
+@import 'scss/badge';
 @import 'scss/buttons';
 @import 'scss/forms';
 @import 'scss/helpers';
