--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -25,7 +25,7 @@
 //  $query1: select max-width, min-width, max-height, min-height
 //
 //
-//  Example;
+//  Example:
 // ------------------------------------
 //
 //  .hello {
