variables file refactor

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -32,7 +32,7 @@ button {
   white-space: nowrap;
 
   &:focus, &:hover, &:active {
-    color: $text-color;
+    color: $text-body;
   }
 
   &:hover {
