--- a/src/scss/_loading-spinner.scss
+++ b/src/scss/_loading-spinner.scss
@@ -16,7 +16,7 @@
 
   span {
     animation-timing-function: ease-in-out;
-    background-color: $white;
+    background-color: $loading-spinner-bg;
     border-radius: 100%;
     display: block;
     height: 9px;
