--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,131 +1,36 @@
-
 /**
-*  $LAYOUT
-*/
-
-$gutterwidth:               24px;
-$container-maxwidth:        1380px;
-$container-medium-maxwidth: 944px;
-$container-small-maxwidth:  400px;
-$radius:                    3px;
-$border-box:                true;
-
-
-/**
-*  $FONT
-*/
-
-$basefont: 'Lato', sans-serif;
-$codefont: 'Courier New', monospace;
-
-$font-size-base:        14px;
-$font-size-base-medium: 15px;
-$font-size-base-large:  15px;
-
-$line-height-base:      1.5em;
-$font-weight-base:      400;
-
-/**
-*  $COLORS
-*/
-
-// white
-$white:                 #ffffff;
+ *  VARIABLES
+ *
+ *  Configure sierra SCSS library by adjusting this file
+ *
+ */
 
 // Brand colors
 $brand-primary:         #1abc9c;
 $brand-secondary:       #9b59b6;
 $brand-dark:            #18232f;
+$brand-light:           #34495e;
 
-$deep-blue:             #171722;
 $color-success:         #4caf50;
 $color-info:            #5bc0de;
 $color-warning:         #f0ad4e;
 $color-error:           #e74c3c;
 
-
-
-// Body background
 $body-bg:               #2c3e50;
 
-// Grey :               #dee6ea;
+$grey:                  #dee6ea;
 $grey-light:            #edf3f6;
-$grey-soft:             #edf3f6;
-$grey-dark:             #969da6;
-$background-grey:       $grey-soft;
+$deep-blue:             #171722; // Deprecated
+$white:                 #ffffff;
+
+// Borders
 $border-color:          #465f78;
-
-// Tipography colors
-$text-dark:             #3e4145;   // body text
-$text-color:            $white;
-$text-grey:             #969da6;
-
-// Tags
-$tag-text-color:        $text-color;
-$tag-bg-color:          #34495e;
-$tag-bullet:            $body-bg;
-
-// Rating
-$rating-bg:             #34495e;
-
-// Headings
-$heading-font:          $basefont;
-$heading-weight:        300;
-$heading-case:          none;
 
 // Shadows
 $shadow-color:          rgba(0, 0, 0, .2);
 $box-shadow:            0 0 5px $shadow-color;
 
-// Forms
-$form-bg-color:         #34495e;
-$form-text-color:       $text-color;
-
-// Tables
-$table-bg-color:        #34495e;
-$table-header-bg-color: $body-bg;
-$table-text-color:      $text-color;
-
-// text map
-$text-color-map: (
-  primary:              $brand-primary,
-  secondary:            $brand-secondary,
-  dark:                 $text-dark,
-  grey:                 $text-grey,
-  green:                $color-success,
-  success:              $color-success,
-  red:                  $color-error,
-  error:                $color-error,
-  warning:              $color-warning
-);
-
-// background-color-map
-$background-color-map: (
-  'primary':              $brand-primary,
-  'dark':                 $brand-dark,
-  'secondary':            $brand-secondary,
-  'white':                $white,
-  'success':              $color-success,
-  'info':                 $color-info,
-  'warning':              $color-warning,
-  'error':                $color-error,
-  'grey':                 $background-grey,
-  'grey-dark':            $grey-dark,
-  'grey-soft':            $grey-soft,
-  'grey-light':           $grey-light
-);
-
-
-// Links
-
-// $linkcolor         : $brand-primary;
-// $linkcolorhover    : darken($linkcolor, 10);
-// $linkcolorvisited  : $brand-primary;
-// $linkcolorfocus    : darken($linkcolorvisited, 10);
-
-
 // Social colors
-
 $fb: rgb(59, 89, 182);
 $tw: rgb(64, 153, 255);
 $googleplus: rgb(215, 61, 50);
@@ -141,108 +46,48 @@ $linkedin: #4875b4;
 $flickr: #fe0883;
 $foursquare: #8fd400;
 
-// Rating colors
-$rating1:     #dd2c00;
-$rating2:     #ff5722;
-$rating3:     #ff9800;
-$rating4:     #ffc107;
-$rating5:     #f5dc00;
-$rating6:     #cddc39;
-$rating7:     #8bc34a;
-$rating8:     #4caf50;
-$rating9:     #43a047;
-$rating10:    #388e3c;
+// Text colors
+$text-color:            $white;       // deprecated. Use $text-body instead.
+$text-body:             $text-color;
+$text-grey:             #969da6;
 
-$background-color-map: map-merge($background-color-map, (
-  rating1: $rating1,
-  rating2: $rating2,
-  rating3: $rating3,
-  rating4: $rating4,
-  rating5: $rating5,
-  rating6: $rating6,
-  rating7: $rating7,
-  rating8: $rating8,
-  rating9: $rating9,
-  rating10: $rating10
-));
-
-
-/**
-*  $BUTTONS
-*/
-
-$button-bg-color:       #64829f; // default color for buttons
-$button-text-color:     $text-color; // default color for buttons
-$button-border-color:   $body-bg;
-$button-border-radius:  2em;
-$button-sizes: (
-  normal: (
-    fontSize: 12px,
-    lineHeight: 1.5,
-    paddingTB: 10px,
-    paddingLR: 20px
-  ),
-  big: (
-    fontSize: 16px,
-    lineHeight: 1.5,
-    paddingTB: 10px,
-    paddingLR: 30px
-  ),
-  small: (
-    fontSize: 11px,
-    lineHeight: 1.273,
-    paddingTB: 6px,
-    paddingLR: 20px
-  ),
-  huge: (
-    fontSize: 16px,
-    lineHeight: 1.5,
-    paddingTB: 15px,
-    paddingLR: 30px
-  ),
-  hugeLg: (
-    fontSize: 18px,
-    lineHeight: 1.5,
-    paddingTB: 18px,
-    paddingLR: 50px
-  )
-);
-
-
-/**
-* BADGES
-*/
-
-$badge-color:           $text-color;
-$badge-bg:              #34495e;
-
-$badges-color-map: (
+$text-color-map: (
   primary:              $brand-primary,
   secondary:            $brand-secondary,
-  dark:                 $brand-dark,
+  body:                 $text-body,
   grey:                 $text-grey,
+  green:                $color-success,
   success:              $color-success,
+  red:                  $color-error,
   error:                $color-error,
   warning:              $color-warning
 );
 
 
 /**
-*  $PAGINATOR
-*/
+ *  GRID SYSTEM
+ *  set $flexboxgrid to `true` to use a flexbox based grid. More info: https://github.com/kristoferjoseph/flexboxgrid
+ *  set $flexboxgrid to `false` to use Twitter bootstrap's grid. More info: https://getbootstrap.com/examples/grid/
+ */
 
-$paginator-item-radius:       $radius;
-$paginator-item-bg:           #34495e;
-$paginator-item-color:        $text-color;
-
-$paginator-item-border:       $body-bg;         // only for compact paginator
-$paginator-item-active-bg:    $brand-primary;
-$paginator-item-active-color: $text-color;
+$flexboxgrid: false;
 
 
 /**
-*  $MEDIA QUERIES BREAKPOINTS
-*/
+ *  LAYOUT
+ */
+
+$gutterwidth:               24px;
+$container-maxwidth:        1380px;
+$container-medium-maxwidth: 944px;
+$container-small-maxwidth:  400px;
+$radius:                    3px;
+$border-box:                true;
+
+
+/**
+ *  MEDIA QUERIES BREAKPOINTS
+ */
 
 // Extra small screen / phone
 //** Deprecated `@screen-xs` as of v3.0.1
@@ -279,17 +124,9 @@ $screen-sm-max:              ($screen-md-min - 1);
 $screen-md-max:              ($screen-lg-min - 1);
 
 
-
 /**
-*  $GRID SYSTEM
-*/
-
-$flexboxgrid: false; // https://github.com/kristoferjoseph/flexboxgrid
-
-
-/**
-*  $BOOTSTRAP GRID SYSTEM CONFIG
-*/
+ *  BOOTSTRAP GRID SYSTEM CONFIG
+ */
 
 // Number of columns in the grid.
 $grid-columns:              12;
@@ -304,11 +141,7 @@ $grid-float-breakpoint:     $screen-sm-min;
 $grid-float-breakpoint-max: ($grid-float-breakpoint - 1);
 
 
-/**
-*  $CONTAINER SIZES
-*/
-
-//## Define the maximum width of `.container` for different screen sizes.
+// CAUTION: This container sizes are deprecated. Use $container-maxwidth instead.
 
 // Small screen / tablet
 $container-tablet:             auto; // (720px + $grid-gutter-width);
@@ -324,3 +157,141 @@ $container-md:                 auto; // $container-desktop;
 $container-large-desktop:      (1140px + $grid-gutter-width);
 //** For `$screen-lg-min` and up.
 $container-lg:                 $container-large-desktop;
+
+
+/**
+ *  COMPONENTS
+ */
+
+// Background colors
+$background-color-map: (
+  'primary':              $brand-primary,
+  'dark':                 $brand-dark,
+  'secondary':            $brand-secondary,
+  'white':                $white,
+  'success':              $color-success,
+  'info':                 $color-info,
+  'warning':              $color-warning,
+  'error':                $color-error,
+  'grey':                 $grey,
+  'grey-light':           $grey-light
+);
+
+// Badges
+$badge-color:           $text-color;
+$badge-bg:              $brand-light;
+$badges-color-map: (
+  primary:              $brand-primary,
+  secondary:            $brand-secondary,
+  dark:                 $brand-dark,
+  grey:                 $grey,
+  success:              $color-success,
+  error:                $color-error,
+  warning:              $color-warning
+);
+
+// Buttons
+$button-bg-color:       #64829f; // default color for buttons
+$button-text-color:     $text-color; // default color for buttons
+$button-border-color:   $body-bg;
+$button-border-radius:  2em;
+$button-sizes: (
+  'normal': (
+    fontSize: 12px,
+    lineHeight: 1.5,
+    paddingTB: 10px,
+    paddingLR: 20px
+  ),
+  'big': (
+    fontSize: 16px,
+    lineHeight: 1.5,
+    paddingTB: 10px,
+    paddingLR: 30px
+  ),
+  'small': (
+    fontSize: 11px,
+    lineHeight: 1.273,
+    paddingTB: 6px,
+    paddingLR: 20px
+  ),
+  'huge': (
+    fontSize: 16px,
+    lineHeight: 1.5,
+    paddingTB: 15px,
+    paddingLR: 30px
+  ),
+  'hugeLg': (
+    fontSize: 18px,
+    lineHeight: 1.5,
+    paddingTB: 18px,
+    paddingLR: 50px
+  )
+);
+
+// Forms
+$form-bg-color:               $brand-light;
+$form-text-color:             $text-color;
+
+// Loading spinner
+$loading-spinner-bg:          $white;
+
+// Paginator
+$paginator-item-radius:       $radius;
+$paginator-item-bg:           $brand-light;
+$paginator-item-color:        $text-color;
+$paginator-item-border:       $body-bg;         // only for compact paginator
+$paginator-item-active-bg:    $brand-primary;
+$paginator-item-active-color: $text-color;
+
+// Rating circle
+$rating-bg:                   $brand-light;
+
+// Rating colors
+$rating1:     #dd2c00;
+$rating2:     #ff5722;
+$rating3:     #ff9800;
+$rating4:     #ffc107;
+$rating5:     #f5dc00;
+$rating6:     #cddc39;
+$rating7:     #8bc34a;
+$rating8:     #4caf50;
+$rating9:     #43a047;
+$rating10:    #388e3c;
+
+$background-color-map: map-merge($background-color-map, (
+  rating1:    $rating1,
+  rating2:    $rating2,
+  rating3:    $rating3,
+  rating4:    $rating4,
+  rating5:    $rating5,
+  rating6:    $rating6,
+  rating7:    $rating7,
+  rating8:    $rating8,
+  rating9:    $rating9,
+  rating10:   $rating10
+));
+
+// Tables
+$table-bg-color:        $brand-light;
+$table-header-bg-color: $body-bg;
+$table-text-color:      $text-color;
+
+// Tags
+$tag-text-color:        $text-color;
+$tag-bg-color:          $brand-light;
+$tag-bullet:            $body-bg;
+
+// Typography
+$basefont: 'Lato', sans-serif;
+$codefont: 'Courier New', monospace;
+
+$font-size-base:        14px;
+$font-size-base-medium: 15px;
+$font-size-base-large:  15px;
+
+$line-height-base:      1.5em;
+$font-weight-base:      400;
+
+$heading-font:          $basefont;
+$heading-weight:        300;
+$heading-case:          none;
